# decombinator

./: .gitignore  .gitmodules  .zenodo.json  AUTHORS  CDR3translator.py  CODE_OF_CONDUCT.md  Collapsinator.py  Collapsinator.sh  Collapsinator_V2.py  CopyPasteDcrLogVals_edited_Py3_2.py  Decombinator.py  Decombinator.sh  Demultiplexor.py  Demultiplexor.sh  Demultiplexor_M13.py  LICENCE  R1_R2_merger.py  README.md  SC_Decombinator.py  dcr_pipeline.py  dcr_utilities.py  decombinator-runner.py  decombinator_test.py  forward_reverse_merger.py  index.html  ligTCRDCR.py  ligTCRcollapse.py  ligTCRdemultiplex.py  ligTCRtranslateCDR3.py  new  old  params.json  pyproject.toml  requirements.txt  run_multiple_files.sh  sc_collapsor.py  testmulti.py  testmulti2.py  testn12.2.py  unique_tag_separator.py  (+1 more)
.github/workflows/: package-build-test.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-package.yml
Illumina-Indexes/: Illumina Indexes_31012018.xlsx  Illumina_SP2_Primer_Index_Sequence_27.08.2019.xlsx
Supplementary-Scripts/: DCRtoGeneName.py  RandomlySample.py  RunTestData.py  UMIhistogram.py
TestData/newTM/: ligTCRdemultiplex.py
Unit-Tests/: alltests.py
Unit-Tests/I8tests/: I8correctlength.py  I8shortby2.py
Unit-Tests/M13tests/: M13correctlength.py  M13longby1.py  M13longby2.py  M13shortby1.py
examples/: cli_example.sh
examples/Logs/: 2025_08_29_alpha__Decombinator_Summary.csv  2025_08_29_beta__Decombinator_Summary.csv  2025_08_29_beta__Decombinator_Summary2.csv  2025_08_29_beta__Decombinator_Summary3.csv  2025_08_29_dcr_TINY_1_alpha_CDR3_Translation_Summary.csv  2025_08_29_dcr_TINY_1_alpha_Collapsing_Summary.csv  2025_08_29_dcr_TINY_1_beta_CDR3_Translation_Summary.csv  2025_08_29_dcr_TINY_1_beta_CDR3_Translation_Summary2.csv  2025_08_29_dcr_TINY_1_beta_CDR3_Translation_Summary3.csv  2025_08_29_dcr_TINY_1_beta_Collapsing_Summary.csv  2025_08_29_dcr_TINY_1_beta_Collapsing_Summary2.csv  2025_08_29_dcr_TINY_1_beta_Collapsing_Summary3.csv
examples/expected_output/: dcr_TINY_1_alpha.freq  dcr_TINY_1_alpha.tsv  dcr_TINY_1_beta.tsv
examples/expected_output/Logs/: 2023_01_31_alpha_TINY_1_Decombinator_Summary.csv  2023_01_31_dcr_TINY_1_alpha_CDR3_Translation_Summary.csv  2023_01_31_dcr_TINY_1_alpha_Collapsing_Summary.csv  2023_01_31_dcr_TINY_1_beta_CDR3_Translation_Summary.csv  2023_01_31_dcr_TINY_1_beta_Collapsing_Summary.csv
examples/input/: TINY_1.fq  TINY_2.fq
src/decombinator/: __init__.py  __main__.py  collapse.py  decombine.py  demultiplex.py  io.py  pipeline.py  translate.py
tests/: conftest.py  test_cli.py  test_collapse.py  test_decombine.py  test_pipeline.py  test_subparsers.py
tests/resources/: 2023_01_31_beta_TINY_1_Decombinator_Summary.csv  dcr_TINY_1_alpha.n12  dcr_TINY_1_beta.freq  dcr_TINY_1_beta.n12  dcr_TINY_1_beta.tsv
unittests/I8tests/: I8longby1.py  I8longby2.py  I8shortby1.py
unittests/M13tests/: M13shortby2.py
