[project]
name = "decombinator"
version = "5.0.1"
description = "A fast and efficient tool for the analysis of T-cell receptor repertoire sequences produced by deep sequencing."
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [{name = "Matthew V. Cowley", email = "m.cowley@ucl.ac.uk"}]
requires-python = ">=3.9"
dependencies = [
    "acora==2.4",
    "biopython==1.84",
    "contourpy==1.2.1",
    "coverage==7.5.4",
    "cycler==0.12.1",
    "fonttools==4.53.1",
    "igraph==0.11.6",
    "iniconfig==2.0.0",
    "joblib==1.4.2",
    "kiwisolver==1.4.5",
    "Levenshtein==0.25.1",
    "logomaker==0.8",
    "matplotlib==3.9.2",
    "networkx==3.2.1",
    "numpy==2.0.0",
    "packaging==24.1",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "pluggy==1.5.0",
    "polyleven==0.8",
    "pyparsing==3.1.2",
    "pyrepseq==1.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "rapidfuzz==3.9.4",
    "regex==2024.5.15",
    "scikit-learn==1.5.1",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "six==1.16.0",
    "texttable==1.7.0",
    "threadpoolctl==3.5.0",
    "tidytcells==2.1.3",
    "tzdata==2024.1"
]
keywords = ["decombinator", "TCR", "TCRseq", "repertoire", "sequence", "analysis"]
classifiers = [
  # How mature is this project?
  "Development Status :: 5 - Production/Stable",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]

[tool.black]
line-length = 79

[project.scripts]
decombinator = "decombinator.pipeline:main"

[project.urls]
"Homepage" = "https://github.com/innate2adaptive/Decombinator"
"Bug Tracker" = "https://github.com/innate2adaptive/Decombinator/issues"
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
